--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,10 +29,10 @@
                 </li>
               <% elsif user_signed_in? %>
                 <li class="mr-3">
-                  <%= link_to "コーディネート一覧", public_coordinates_path, class: "nav-link text-light btn btn-secondary" %>
+                  <%= link_to "コーディネート一覧", coordinates_path, class: "nav-link text-light btn btn-secondary" %>
                 </li>
                 <li class="mr-3">
-                  <%= link_to "マイページ", public_user_path, class: "nav-link text-light btn btn-secondary" %>
+                  <%= link_to "マイページ", mypage_path, class: "nav-link text-light btn btn-secondary" %>
                 </li>
                 <li>
                   <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link text-light btn btn-secondary" %>
