[Add] 新規登録とログイン画面のレイアウト

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,9 +57,12 @@
       <p><%= notice %></p>
       <%= yield %>
     </main>
-    <footer class="text-center border-top border-dark">
-      <div class="m-3">
-        <p>CopyRight RANDINATE</p>
+
+    <!-- 明日はここから --->
+
+    <footer class="text-center bg-dark">
+      <div class="container">
+        <p class="text-white">CopyRight RANDINATE</p>
       </div>
     </footer>
   </body>
