--- a/app/views/public/coordinates/_button.html.erb
+++ b/app/views/public/coordinates/_button.html.erb
@@ -2,7 +2,7 @@
   <button type="button" class="btn btn-primary btn-lg">メンズ<br>ランダム</button>
   <button type="button" class="btn btn-primary btn-lg">レディース<br>ランダム</button>
   <button type="button" class="btn btn-primary btn-lg">ユニセックス<br>ランダム</button>
-  <button type="button" class="btn btn-success btn-lg">コーディネートを投稿</button>
+  <button type="button" class="btn btn-success btn-lg">コーディネート投稿</button>
   <!-- 現在ユーザーだけボタンを表示する記述 -->
-    <button type="button" class="btn btn-success btn-lg">コーディネートを編集</button>
+    <button type="button" class="btn btn-success btn-lg">コーディネート編集</button>
 </div>
