--- a/app/views/public/coordinates/new.html.erb
+++ b/app/views/public/coordinates/new.html.erb
@@ -1,2 +1,37 @@
-<h1>Public::Coordinates#new</h1>
-<p>Find me in app/views/public/coordinates/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-10 offset-md-1 my-5">
+      <h2 class="bg-light d-inline-block px-3">コーディネート投稿</h2>
+    </div>
+    <div class="col-5">
+      <%= form_with model: @coordinate, url: coordinates_path do |f| %>
+      <div class="form-group">
+        <%= f.label :コーディネート画像, class: "font-weight-bold" %><br>
+        <%= f.file_field :coordinate_image, class: "form-control-image", accept: "image/*" %>
+      </div>
+    </div>
+    <div class="col-7">
+      <div class="form-group">
+        <p class="font-weight-bold">スタイル</p>
+        <div class="form-check form-check-inline">
+          <%= f.radio_button :gender, Coordinate.styles.key(0), class: "form-check-input mr-3" %>
+          <%= f.label :gender_male, Coordinate.styles_i18n[:mens], class: "form-check-label mr-3" %>
+        </div>
+        <div class="form-check form-check-inline">
+          <%= f.radio_button :gender, Coordinate.styles.key(0), class: "form-check-input mr-3" %>
+          <%= f.label :gender_female, Coordinate.styles_i18n[:ladies], class: "form-check-label mr-3" %>
+        </div>
+        <div class="form-check form-check-inline">
+          <%= f.radio_button :gender, Coordinate.styles.key(0), class: "form-check-input mr-3" %>
+          <%= f.label :gender_other, Coordinate.styles_i18n[:unisex], class: "form-check-label" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :紹介, class: "font-weight-bold" %><br>
+        <%= f.text_area :introduction, class: "form-control", rows: "10" %>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
