--- a/app/views/public/coordinates/new.html.erb
+++ b/app/views/public/coordinates/new.html.erb
@@ -7,8 +7,9 @@
       <%= form_with model: @coordinate, url: coordinates_path do |f| %>
       <div class="form-group">
         <%= f.label :コーディネート画像, class: "font-weight-bold" %><br>
-        <%= f.file_field :coordinate_image, class: "form-control-image", accept: "image/*" %>
+        <%= f.file_field :coordinate_image, class: "form-control-image", accept: "image/*", id: "form" %>
       </div>
+      <div id="image_preview" class="d-flex justify-content-center"></div>
     </div>
     <div class="col-7">
       <div class="form-group">
@@ -28,7 +29,14 @@
       </div>
       <div class="form-group">
         <%= f.label :紹介, class: "font-weight-bold" %><br>
-        <%= f.text_area :introduction, class: "form-control", rows: "10" %>
+        <%= f.text_area :introduction, class: "form-control", rows: "8" %>
+      </div>
+      <div class="form-group form-group_tags">
+        <%= f.label :tag_list, "タグ", class: "form-label" %>
+        <%= f.text_field :tag_list, value: @coordinate.tag_list.join(","), class: "form-control", data: { role: "tagsinput" } %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "投稿", class: "btn btn-lg btn-primary btn-block" %>
       </div>
       <% end %>
     </div>
