--- a/app/views/public/coordinates/index.html.erb
+++ b/app/views/public/coordinates/index.html.erb
@@ -1,2 +1,31 @@
-<h1>コーディネート投稿の一覧</h1>
-<p>Find me in app/views/public/coordinates/index.html.erb</p>
+<div class="container my-5">
+  <div class="row">
+    <div class="col-3 d-flex flex-column">
+      <%= render 'public/coordinates/button' %>
+    </div>
+    <div class="col-8 offset-md-1">
+      <div class="row my-3">
+        <h2 class="font-weight-bold">コーディネート一覧</h2>
+      </div>
+      <div class="row">
+        <% @coordinates.each do |coordinate| %>
+          <div class="col-2 p-3">
+            <div>
+              <%= link_to coordinate_path(coordinate) do %>
+                <%= image_tag coordinate.get_coordinate_image(150,200) %>
+              <% end %>
+            </div>
+            <div>
+              <%= link_to coordinate.user.name, user_path(coordinate.user) %><br>
+              <%= link_to coordinate.style_i18n %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+      <div class="row">
+        <%= paginate @coordinates %>
+      </div>
+    </div>
+  </div>
+</div>
+
