--- a/app/views/public/coordinates/new.html.erb
+++ b/app/views/public/coordinates/new.html.erb
@@ -15,16 +15,16 @@
       <div class="form-group">
         <p class="font-weight-bold">スタイル</p>
         <div class="form-check form-check-inline">
-          <%= f.radio_button :gender, Coordinate.styles.key(0), class: "form-check-input mr-3" %>
-          <%= f.label :gender_male, Coordinate.styles_i18n[:mens], class: "form-check-label mr-3" %>
+          <%= f.radio_button :style, Coordinate.styles.key(0), class: "form-check-input mr-3" %>
+          <%= f.label :style_mens, Coordinate.styles_i18n[:mens], class: "form-check-label mr-3" %>
         </div>
         <div class="form-check form-check-inline">
-          <%= f.radio_button :gender, Coordinate.styles.key(0), class: "form-check-input mr-3" %>
-          <%= f.label :gender_female, Coordinate.styles_i18n[:ladies], class: "form-check-label mr-3" %>
+          <%= f.radio_button :style, Coordinate.styles.key(1), class: "form-check-input mr-3" %>
+          <%= f.label :style_ladies, Coordinate.styles_i18n[:ladies], class: "form-check-label mr-3" %>
         </div>
         <div class="form-check form-check-inline">
-          <%= f.radio_button :gender, Coordinate.styles.key(0), class: "form-check-input mr-3" %>
-          <%= f.label :gender_other, Coordinate.styles_i18n[:unisex], class: "form-check-label" %>
+          <%= f.radio_button :style, Coordinate.styles.key(2), class: "form-check-input mr-3" %>
+          <%= f.label :style_unisex, Coordinate.styles_i18n[:unisex], class: "form-check-label" %>
         </div>
       </div>
       <div class="form-group">
@@ -42,4 +42,3 @@
     </div>
   </div>
 </div>
-
