[Add] コーディネート編集画面

--- a/app/views/public/coordinates/_button.html.erb
+++ b/app/views/public/coordinates/_button.html.erb
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-primary btn-lg">メンズ<br>ランダム</button>
-<button type="button" class="btn btn-primary btn-lg">レディース<br>ランダム</button>
-<button type="button" class="btn btn-primary btn-lg">ユニセックス<br>ランダム</button>
-<button type="button" class="btn btn-success btn-lg">コーディネート投稿</button>
+<button type="button" class="btn btn-primary btn-lg mb-3">メンズ<br>ランダム</button>
+<button type="button" class="btn btn-primary btn-lg mb-3">レディース<br>ランダム</button>
+<button type="button" class="btn btn-primary btn-lg mb-3">ユニセックス<br>ランダム</button>
+<%= link_to "コーディネート投稿", new_coordinate_path, class: "btn btn-success btn-lg mb-3" %>
