--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
-    <div class="col-3 my-5">
+    <div class="col-3 my-3">
       <h1 class="bg-light d-inline-block px-3">会員情報</h1>
     </div>
     <% if @user == current_user %>
-      <div class="col-3 offset-md-1 my-5">
+      <div class="col-3 my-3">
         <%= link_to "会員情報を編集", edit_user_path(@user), class: "btn btn-success btn-lg" %>
       </div>
     <% end %>
-    <div class="col-9 offset-md-1">
+    <div class="col-md-9 offset-md-1 my-3">
       <table class="table table-borderd">
         <tbody>
           <tr>
@@ -26,31 +26,40 @@
         </tbody>
       </table>
     </div>
-    <div class="col-10 mx-0">
+    <div class="col-12">
       <div class="row">
-        <div class="col-6">
-          <h3 class="bg-light d-inline-block px-3">投稿一覧</h3>
-          <% @coordinates.limit(4).each do |coordinate| %>
+        <div class="col-6 my-3">
+          <div class="d-flex justify-content-between">
+            <h3 class="bg-light px-3">投稿一覧</h3>
+            <div class="d-flex align-items-center">
+              <!-- カレントユーザーの投稿一覧のリンク　-->
+              <%= link_to "全ての投稿を見る>" %>
+            </div>
+          </div>
+          <% @coordinates.limit(3).each do |coordinate| %>
             <div>
               <%= link_to coordinate_path(coordinate) do %>
-                <%= image_tag coordinate.get_coordinate_image(150,200) %>
+                <%= image_tag coordinate.get_coordinate_image(170,230) %>
               <% end %>
-            </div>
-            <div>
-              <%= link_to coordinate.style %>
             </div>
           <% end %>
         </div>
-        <div class="col-6">
-          <h3 class="bg-light d-inline-block px-3">ブックマーク一覧</h3>
+        <div class="col-6 my-3">
+          <div class="d-flex justify-content-between">
+            <h3 class="bg-light d-inline-block px-3">ブックマーク一覧</h3>
+            <div class="d-flex align-items-center">
+              <!-- カレントユーザーブックマーク一覧のリンク　-->
+              <%= link_to "全てのブックマークを見る>" %>
+            </div>
+          </div>
           <% @bookmarks.limit(4).each do |bookmark| %>
             <div>
               <%= link_to coordinate_path(coordinate) do %>
-                <%= image_tag coordinate.get_coordinate_image %>
+                <%= image_tag coordinate.get_coordinate_image(170,230) %>
               <% end %>
             </div>
             <div>
-              <%= link_to coordinate.user.name, coordinate_path(coordinate) %><br>
+              <%= link_to coordinate.user.name, coordinate_path(coordinate) %>
               <%= link_to coordinate.style %>
             </div>
           <% end %>
