[Add] ブックマーク機能

--- a/app/views/admin/coordinates/show.html.erb
+++ b/app/views/admin/coordinates/show.html.erb
@@ -11,7 +11,7 @@
         <%= link_to "投稿を削除", admin_coordinate_path(@coordinate), method: :delete, data: {confirm: "本当に削除しますか？"}, class: "btn btn-danger btn-lg" %>
       <% end %>
     </div>
-    <div class="col-8 offset-md-1">
+    <div class="col">
       <div class="row my-3">
         <h2 class="bg-light px-3">コーディネート詳細</h2>
       </div>
