--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -39,7 +39,7 @@
     <div class="d-flex justify-content-between my-3">
       <h3 class="bg-light px-3">投稿一覧</h3>
       <div class="d-flex align-items-center">
-        <!-- カレントユーザーの投稿一覧のリンク　-->
+        <!-- 対象ユーザーの投稿一覧のリンク　-->
         <%= link_to "全ての投稿を見る>" %>
       </div>
     </div>
