--- a/app/views/public/coordinates/index.html.erb
+++ b/app/views/public/coordinates/index.html.erb
@@ -1,23 +1,38 @@
 <div class="container my-5">
   <div class="row">
-    <div class="col-3 d-flex flex-column">
-      <%= render 'public/coordinates/button' %>
-    </div>
-    <div class="col-8 offset-md-1">
-      <div class="row my-3">
-        <h2 class="font-weight-bold">コーディネート一覧</h2>
+    <% if user_signed_in? %>
+      <div class="col-3 d-flex flex-column">
+        <%= render 'public/coordinates/button' %>
       </div>
-      <div class="row">
+    <% end %>
+    <div class="col">
+      <div class="row m-3">
+        <h2 class="font-weight-bold bg-light px-3">コーディネート一覧</h2>
+      </div>
+      <div class="row mx-3">
         <% @coordinates.each do |coordinate| %>
-          <div class="col-2 p-3">
-            <div>
-              <%= link_to coordinate_path(coordinate) do %>
-                <%= image_tag coordinate.get_coordinate_image(150,200) %>
+          <div class="col-2 mx-4 mt-3">
+            <div class="d-flex flex-row">
+              <% if user_signed_in? %>
+                <%= link_to coordinate_path(coordinate) do %>
+                  <%= image_tag coordinate.get_coordinate_image(150,200) %>
+                <% end %>
+                <div id="bookmark_btn_<%= coordinate.id %>">
+                  <%= render "public/bookmarks/btn", coordinate: coordinate %>
+                </div>
+              <% elsif admin_signed_in? %>
+                <%= link_to admin_coordinate_path(coordinate) do %>
+                  <%= image_tag coordinate.get_coordinate_image(150,200) %>
+                <% end %>
               <% end %>
             </div>
             <div>
-              <%= link_to coordinate.user.name, user_path(coordinate.user) %><br>
-              <%= link_to coordinate.style_i18n %>
+              <% if user_signed_in? %>
+                <%= link_to coordinate.user.name, user_path(coordinate.user) %><br>
+                <%= link_to coordinate.style_i18n %>
+              <% elsif admin_signed_in? %>
+                <%= link_to coordinate.user.name, admin_user_path(coordinate.user) %>
+              <% end %>
             </div>
           </div>
         <% end %>
@@ -28,4 +43,3 @@
     </div>
   </div>
 </div>
-
