--- a/app/views/public/users/bookmarks.html.erb
+++ b/app/views/public/users/bookmarks.html.erb
@@ -1,22 +1,20 @@
 <div class="container my-5">
   <div class="row">
-    <% if user_signed_in? %>
-    <div class="col-3 d-flex flex-column">
-      <%= render 'public/coordinates/button' %>
-    </div>
-    <% end %>
     <div class="col">
-      <div class="row my-3">
-        <h2 class="font-weight-bold bg-light px-3">コーディネート一覧</h2>
+      <div class="row m-3">
+        <h2 class="bg-light px-3">ブックマーク一覧</h2>
       </div>
-      <div class="row">
-        <% @coordinates.each do |coordinate| %>
-          <div class="col-2 p-3">
-            <div>
+      <div class="row mx-3">
+        <% @bookmark_coordinates.each do |coordinate| %>
+          <div class="col-2 mx-4 mt-3">
+            <div class="d-flex flex-row">
               <% if user_signed_in? %>
                 <%= link_to coordinate_path(coordinate) do %>
                   <%= image_tag coordinate.get_coordinate_image(150,200) %>
                 <% end %>
+                <div id="bookmark_btn_<%= coordinate.id %>">
+                  <%= render "public/bookmarks/btn", coordinate: coordinate %>
+                </div>
               <% elsif admin_signed_in? %>
                 <%= link_to admin_coordinate_path(coordinate) do %>
                   <%= image_tag coordinate.get_coordinate_image(150,200) %>
@@ -35,7 +33,7 @@
         <% end %>
       </div>
       <div class="row">
-        <%= paginate @coordinates %>
+        <%= paginate @bookmark_coordinates %>
       </div>
     </div>
   </div>
