--- a/app/views/public/users/bookmarks.html.erb
+++ b/app/views/public/users/bookmarks.html.erb
@@ -3,6 +3,7 @@
     <div class="col">
       <div class="row m-3">
         <h2 class="bg-light px-3">ブックマーク一覧</h2>
+        <!-- ブックマークからランダムのボタン -->
       </div>
       <div class="row mx-3">
         <% @bookmark_coordinates.each do |coordinate| %>
