--- a/app/views/public/coordinates/new.html.erb
+++ b/app/views/public/coordinates/new.html.erb
@@ -37,8 +37,9 @@
         <%= f.label :tag_list, "タグ", class: "font-weight-bold" %>
         <%= f.text_field :tag_list, value: @coordinate.tag_list.join(","), class: "form-control", data: { role: "tagsinput" } %>
       </div>
-      <div class="form-group">
-        <%= f.submit "投稿", class: "btn btn-lg btn-primary btn-block" %>
+      <div class="form-group d-flex">
+        <%= f.submit "投稿（公開）", name: "published", class: "btn btn-lg btn-primary flex-fill mr-2" %>
+        <%= f.submit "下書き（非公開）", name: "draft", class: "btn btn-lg btn-success flex-fill ml-2" %>
       </div>
     </div>
     <% end %>
