--- a/app/views/public/coordinates/show.html.erb
+++ b/app/views/public/coordinates/show.html.erb
@@ -1,34 +1,34 @@
-<div class="container my-5">
+<div class="container mt-5">
   <div class="row">
     <div class="col-3 d-flex flex-column">
       <%= render 'public/coordinates/button' %>
-      <% if @coordinate.user == current_user %>
-        <%= link_to "コーディネート編集", edit_coordinate_path(@coordinate), class: "btn btn-success btn-lg mb-3" %>
-        <%= link_to "コーディネートを削除", coordinate_path(@coordinate), method: :delete, data: {confirm: "本当に削除しますか？"}, class: "btn btn-danger btn-lg" %>
-      <% end %>
     </div>
     <div class="col">
       <div class="d-flex align-items-center m-3">
         <h2 class="font-weight-bold bg-light px-3 mr-3">コーディネート詳細</h2>
-        <div id="bookmark_btn_<%= @coordinate.id %>">
+        <div id="bookmark_btn_<%= @coordinate.id %>" class="mr-5">
           <%= render "public/bookmarks/btn", coordinate: @coordinate %>
         </div>
+        <% if @coordinate.user == current_user %>
+          <%= link_to "コーディネート編集", edit_coordinate_path(@coordinate), class: "btn btn-success mr-3" %>
+          <%= link_to "コーディネート削除", coordinate_path(@coordinate), method: :delete, data: {confirm: "本当に削除しますか？"}, class: "btn btn-danger" %>
+        <% end %>
       </div>
-      <div class="row mx-3">
-        <div class="col-5 d-flex justify-content-center">
-          <%= image_tag @coordinate.get_coordinate_image(420,560) %>
+      <div class="row m-3">
+        <div class="col-6 d-flex justify-content-center">
+          <%= image_tag @coordinate.get_coordinate_image(360,480) %>
         </div>
-        <div class="col-7">
+        <div class="col-5 offset-1">
           <div class="row mt-3">
-            <div class="col-md-4 text-center border border-dark rounded">ニックネーム</div>
-            <div class="col-md-7 offset-md-1 text-center border border-dark rounded"><%= @coordinate.user.name %></div>
+            <div class="col-md-5 text-center border border-dark rounded">ニックネーム</div>
+            <div class="col-md-7 text-center"><%= @coordinate.user.name %></div>
           </div>
           <div class="row mt-3">
-            <div class="col-md-4 text-center border border-dark rounded">スタイル</div>
-            <div class="col-md-7 offset-md-1 text-center border border-dark rounded"><%= @coordinate.style_i18n %></div>
+            <div class="col-md-5 text-center border border-dark rounded">スタイル</div>
+            <div class="col-md-7 text-center"><%= @coordinate.style_i18n %></div>
           </div>
           <div class="row">
-            <div class="col-4 text-center border border-dark rounded mt-3">紹介</div>
+            <div class="col-5 text-center border border-dark rounded mt-3">紹介</div>
             <div class="col-12 mt-3 border border-dark rounded" style="height: 250px">
               <p><%= @coordinate.introduction %></p>
             </div>
