--- a/app/views/public/coordinates/_button.html.erb
+++ b/app/views/public/coordinates/_button.html.erb
@@ -1,4 +1,6 @@
-<button type="button" class="btn btn-primary btn-lg mb-3">メンズ<br>ランダム</button>
-<button type="button" class="btn btn-primary btn-lg mb-3">レディース<br>ランダム</button>
-<button type="button" class="btn btn-primary btn-lg mb-3">ユニセックス<br>ランダム</button>
-<%= link_to "コーディネート投稿", new_coordinate_path, class: "btn btn-success btn-lg mb-3" %>
+<div class="col-3 d-flex flex-column">
+  <button type="button" class="btn btn-primary btn-lg mb-3">メンズ<br>ランダム</button>
+  <button type="button" class="btn btn-primary btn-lg mb-3">レディース<br>ランダム</button>
+  <button type="button" class="btn btn-primary btn-lg mb-3">ユニセックス<br>ランダム</button>
+  <%= link_to "コーディネート投稿", new_coordinate_path, class: "btn btn-success btn-lg mb-3" %>
+</div>
