--- a/app/views/public/coordinates/_index.html.erb
+++ b/app/views/public/coordinates/_index.html.erb
@@ -1,13 +1,12 @@
-<div class="col-2 mx-4 mt-3">
+<div class="col-2 m-4">
   <div class="d-flex flex-row">
     <% if user_signed_in? %>
       <%= link_to coordinate_path(coordinate) do %>
         <%= image_tag coordinate.get_coordinate_image(150,200) %>
       <% end %>
-      <!-- タブメニューでブックマーク非同期が使えない -->
-      <!--<div id="bookmark_btn_<%#= coordinate.id %>">-->
-        <%#= render "public/bookmarks/btn", coordinate: coordinate %>
-      <!--</div>-->
+      <div id="bookmark_btn_<%= coordinate.id %>">
+        <%= render "public/bookmarks/btn", coordinate: coordinate %>
+      </div>
     <% elsif admin_signed_in? %>
       <%= link_to admin_coordinate_path(coordinate) do %>
         <%= image_tag coordinate.get_coordinate_image(150,200) %>
