--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,9 +1,7 @@
 <div class="container my-5">
   <div class="row">
-    <div class="col-3 d-flex flex-column">
-      <%= render 'public/coordinates/button' %>
-    </div>
-    <div class="col-8 offset-md-1">
+    <%= render 'public/coordinates/button' %>
+    <div class="col">
       <div class="text-center m-5">
         <p>
           Welcome,RANDINATE!<br>
@@ -13,7 +11,7 @@
           あなたのお気に入りを探そう！！！
         </p>
       </div>
-      <div class="row my-3">
+      <div class="row m-3">
         <h2 class="font-weight-bold">新着投稿</h2>
       </div>
       <div class="row">
